fix: 컨벤션에 따라 naming 수정 #67